# speculative_classifier

./: README.md  pyproject.toml
src/speculative_classifier/: data.py  main.py  single_token_test.py
